adds sending of data from python to board

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "nrf-connect.applications": [
         "${workspaceFolder}/Program1",
         "${workspaceFolder}/event_trigger"
-    ]
+    ],
+    "files.associations": {
+        "conn.h": "c"
+    }
 }
