--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "${workspaceFolder}/event_trigger",
         "${workspaceFolder}/I2C",
         "${workspaceFolder}/target_eeprom",
-        "${workspaceFolder}/I2C_MAX30205"
+        "${workspaceFolder}/I2C_MAX30205",
+        "${workspaceFolder}/I2C_BLE_MAX30205",
+        "${workspaceFolder}/SPI_Flash"
     ],
     "files.associations": {
         "conn.h": "c",
